--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:db": "docker-compose -f docker-compose.yml up -d",
+    "start": "npm run start:db && nest start",
+    "start:dev": "npm run start:db && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
