--- a/api/package.json
+++ b/api/package.json
@@ -23,14 +23,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.1.4",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/socket.io": "^3.0.2",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie": "^0.5.0",
     "mongoose": "^6.6.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
