--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.5",
+    "@nuxtjs/tailwindcss": "^6.0.1",
     "@tailwindcss/typography": "^0.5.7",
-    "nuxt": "3.0.0-rc.11"
+    "nuxt": "3.0.0-rc.12"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.3",
-    "@heroicons/vue": "^2.0.12",
-    "@types/node": "^18.8.0",
-    "daisyui": "^2.31.0",
-    "tailwindcss": "^3.1.8"
+    "@pinia/nuxt": "^0.4.3",
+    "daisyui": "^2.33.0"
   }
 }
