--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.3",
-    "daisyui": "^2.33.0"
+    "daisyui": "^2.33.0",
+    "socket.io-client": "^4.5.3"
   }
 }
